--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,14 +2,10 @@ name: 'Code Scanning - Action'
 
 on:
   push:
-    branches:
-      - main
-      - release-*
+    branches: [ "v5.4-beta_release" ]
   pull_request:
-    branches:
-      - main
-      - release-*
-  schedule:
+    branches: [ "v5.4-beta_release" ]
+  #schedule:
     #        ┌───────────── minute (0 - 59)
     #        │  ┌───────────── hour (0 - 23)
     #        │  │ ┌───────────── day of the month (1 - 31)
@@ -19,7 +15,7 @@ on:
     #        │  │ │ │ │
     #        │  │ │ │ │
     #        *  * * * *
-    - cron: '30 1 * * 0'
+  #  - cron: '30 1 * * 0'
 
 permissions:
   contents: read
